--- a/s9/util/categories.html
+++ b/s9/util/categories.html
@@ -25,6 +25,7 @@
 | <A href="#9">Binding constructs and setters</A>
 | <A href="#a">String operations</A>
 | <A href="#b">Input/Output</A>
+| <A href="#a1">S9fES internal functions</A>
 | <A href="#c">System functions</A>
 | <A href="#d">Time functions</A>
 | <A href="#e">Set operations</A>
@@ -103,7 +104,6 @@
 <H3><A name="8">Control</A></H3>
 <DL>
  <DD>and-letstar.scm</DD>
- <DD>catch.scm</DD>
  <DD>cond-expand.scm</DD>
  <DD>letcc.scm</DD>
  <DD>matcher.scm</DD>
@@ -157,6 +157,7 @@
  <DD>string-tools.scm</DD>
  <DD>string-translate.scm</DD>
  <DD>string-unsplit.scm</DD>
+ <DD>troffify-char.scm</DD>
  <DD>write-to-string.scm @</DD>
 </DL>
 
@@ -174,17 +175,23 @@
  <DD>write-to-string.scm</DD>
 </DL>
 
+<H3><A name="a1">S9fES internal functins</A></H3>
+<DL>
+ <DD>disassemble.scm</DD>
+</DL>
+
 <H3><A name="c">System functions</A></H3>
 <DL>
  <DD>basename.scm</DD>
  <DD>dirname.scm</DD>
- <DD>find-help-path.scm</DD>
- <DD>find-help.scm</DD>
+ <DD>find-help-page.scm</DD>
  <DD>format-time.scm</DD>
  <DD>leap-yearp.scm</DD>
+ <DD>make-help-index.scm</DD>
  <DD>mode-to-string.scm</DD>
  <DD>name-to-file-name.scm</DD>
  <DD>parse-optionsb.scm</DD>
+ <DD>scan-help-pages.scm</DD>
  <DD>search-path.scm</DD>
  <DD>spawn-command.scm</DD>
  <DD>spawn-shell-command.scm</DD>
